fix(docs-infra): max-height IDE error panel visibility (#54128) Remove max-height: 200px in ul child inline-errors-box, add the overflow & max-height in percentages to the parent for correct visualization
Fixes #52760

refactor(docs-infra): correct typo
Correct typo in comment

feat(docs-infra): modify the height of the editor
If error box are displayed, modify the height of the editor

PR Close #54128

--- a/adev/src/app/editor/embedded-editor.component.scss
+++ b/adev/src/app/editor/embedded-editor.component.scss
@@ -32,7 +32,13 @@ $width-breakpoint: 950px;
     }
   }
 
-  // If files are displayed, shpare the space
+  // If error box are displayed, modify the height of the editor
+  &:has(.adev-inline-errors-box) {
+    .adev-code-editor-wrapper {
+      height: calc(50% - 33px) ;
+    }
+  }
+  // If files are displayed, share the space
   &:has(.docs-editor-tabs) {
     .adev-tutorial-code-editor {
       display: block;
